--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -33,8 +33,8 @@
 
 	bci = !hub ci-status -v | awk '{ print $3 }' | xargs open
 
-	C = !git branch -a | grep -v $(git branch --show-current) | fzy | xargs git checkout
-	D = !git lg | peco | gawk '{ if (match($0,/([0-9a-f]{6})/,m)) print m[0] }' | paste -s -d' ' | xargs git diff
+	cb = !git branch -a | grep -v $(git branch --show-current) | fzy | xargs git checkout
+	dl = !git lg | peco | gawk '{ if (match($0,/([0-9a-f]{6})/,m)) print m[0] }' | paste -s -d' ' | xargs git diff
 [hub]
 	protocol = ssh
 [include]
