--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -31,7 +31,7 @@
 	# Then other can access via `git clone git://#{YOUR_IP_ADDRESS}/
 	serve = !git daemon --reuseaddr --verbose  --base-path=. --export-all ./.git
 
-	bci = !hub ci-status -v | awk '{ print $3 }' | xargs open
+	bci = !hub ci-status -v origin/HEAD | awk '{ print $3 }' | xargs open
 
 	cb = !git branch -a | grep -v $(git branch --show-current) | fzy | xargs git checkout
 	dl = !git lg | peco | gawk '{ if (match($0,/([0-9a-f]{6})/,m)) print m[0] }' | paste -s -d' ' | xargs git diff
